# Project-And-E

./: .gitignore  BUGFIX_HISTORY.md  CMakeLists.txt  OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  lv_conf.h  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  stack_fix.txt
.cache/clangd/index/: _lv_cache_lru_rb.c.4361C83820BD568F.idx  _lv_cache_lru_rb.h.B0789E51B7C7B331.idx  a2dp.c.4EB75CCD8A8E05D3.idx  a2dp.c.52FE784D02BBAE2F.idx  a2dp.h.034BDAD79998C425.idx  a2dp.h.57BCE042E1A8A409.idx  a2dp_sink.c.32135BE797E90C94.idx  a2dp_sink.c.90F9973EACE8C14A.idx  a2dp_sink.h.47CA1D0EC69BDDB9.idx  a2dp_sink.h.B5271EB1605081E9.idx  a2dp_source.c.81DCA097F537B108.idx  a2dp_source.c.D7E4E2465DC71A0F.idx  a2dp_source.h.2738AC7724588D2C.idx  a2dp_source.h.B734C6B4CE35C9E3.idx  ad_parser.c.2DDF6E8FE52C1BA0.idx  ad_parser.c.48197EF44FF152B5.idx  ad_parser.h.72D7AA693D94C6D7.idx  ad_parser.h.B87293AA8C44323D.idx  adv_bearer.c.58E27F25E4CE69E9.idx  adv_bearer.c.F13087779DA6453F.idx  adv_bearer.h.26186AD2D7E8ED25.idx  adv_bearer.h.ECC561D2D5B2A7A5.idx  alloc.c.8B870CD99BC953D2.idx  alloc.c.B3ED3F2490EBC323.idx  (+3398 more)
And-E Display/: And-E_Display.ino  Controller.cpp  Controller.h  Display.cpp  Display.h  ESPNowComm.cpp  ESPNowComm.h
And-E Receiver/: And-E_Receiver.ino  ESPNowComm.cpp  ESPNowComm.h  FFT.cpp  FFT.h
main/: CMakeLists.txt  display.c  display.h  espnow_task.c  espnow_task.h  idf_component.yml  main.c  my_platform.c  my_platform.h  system_config.h  ui_config.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/assets/: ui_font_Chokokutai.c  ui_font_Chokokutai.fcfg
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_button1.c  ui_comp_button1.h  ui_comp_hook.c  ui_comp_hook.h
main/ui/images/: ui_img_1471171794.c  ui_img_1577682898.c  ui_img_1768070411.c  ui_img_493105991.c  ui_img_592052946.c  ui_img_686816875.c  ui_img_836209702.c
main/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h
(+1 files in other folders)
